Add localstorage and fetch corrections

--- a/src/html/partials/form/share.html
+++ b/src/html/partials/form/share.html
@@ -11,20 +11,22 @@
   <!-- <div class="border"></div> -->
 
   <div class="share__box collapsable__content">
-    <button class="share__box--button js-card-result" type="submit" title="Create card">
+    <button
+      class="share__box--button js-create-btn"
+      type="submit"
+      title="Create card"
+    >
       <i class="iconCard far fa-address-card"></i>
       Crear tarjeta
     </button>
-    <div class="js-card-result"></div>
-    <!-- <div class="border"></div> -->
-    <!-- <div class="share__box--subsection">
+    <div class="share__box--subsection">
       <h3 class="titleCard">La tarjeta ha sido creada:</h3>
-      <a class="linkCard" href="" target="_blank"
+      <a class="linkCard js-card-result" href="" target="_blank"
         >link awesome profile card</a
       >
       <a class="twitterLink" href="" target="_blank"
         ><i class="icon fab fa-twitter"></i>Compartir en twitter</a
-      > -->
+      >
     </div>
   </div>
 </fieldset>
