Add collapsables closed correction

--- a/src/html/partials/form/design.html
+++ b/src/html/partials/form/design.html
@@ -1,5 +1,5 @@
 <!--design section-->
-<fieldset class="design js-container">
+<fieldset class="design js-container collapsable__close">
   <include
     src="./titles.html"
     classTitle="design__title js-title"
