--- a/src/html/partials/form/share.html
+++ b/src/html/partials/form/share.html
@@ -1,5 +1,5 @@
 <!--Secction share-->
-<fieldset class="share js-container">
+<fieldset class="share js-container collapsable__close">
   <include
     src="./titles.html"
     classTitle="share__title js-title"
