--- a/src/html/partials/generatorCard.html
+++ b/src/html/partials/generatorCard.html
@@ -1,6 +1,6 @@
 <section class="generator">
   <article class="generator__article">
-    <div class="generator__article--button1">
+    <div class="generator__article--button1 js-reset">
       <i class="far fa-trash-alt"></i>Reset
     </div>
     <div class="generator__article--container js-card">
@@ -12,9 +12,7 @@
           Profesión
         </h3>
       </div>
-      <div
-        class="js__profile-image container__img">
-      </div>
+      <div class="js__profile-image container__img"></div>
       <nav class="container__nav">
         <ul class="menu">
           <li class="menu__item">
