--- a/src/html/partials/form/share.html
+++ b/src/html/partials/form/share.html
@@ -19,7 +19,7 @@
       <i class="iconCard far fa-address-card"></i>
       Crear tarjeta
     </button>
-    <div class="share__box--subsection">
+    <div class="share__box--subsection js-hidden">
       <h3 class="titleCard">La tarjeta ha sido creada:</h3>
       <a class="linkCard js-card-result" href="" target="_blank"
         >link awesome profile card</a
