--- a/src/scss/layout/_generatorCard.scss
+++ b/src/scss/layout/_generatorCard.scss
@@ -18,6 +18,7 @@
     flex-direction: column;
     align-items: flex-start;
     &--button1 {
+      cursor: pointer;
       display: flex;
       justify-content: center;
       align-items: center;
