--- a/src/scss/layout/form/_share.scss
+++ b/src/scss/layout/form/_share.scss
@@ -35,6 +35,7 @@
     flex-direction: column;
     align-items: center;
     &--button {
+      cursor: pointer;
       text-transform: uppercase;
       width: 199px;
       height: 50px;
