Add form fields comprobation before fetch

--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -1,5 +1,5 @@
 <!-- fill section-->
-<fieldset class="fill js-container collapsable__close">
+<fieldset class="fill js-container collapsable__close collapsable__open">
   <include
     src="./titles.html"
     classTitle="fill__title js-title"
