--- a/src/html/partials/form/share.html
+++ b/src/html/partials/form/share.html
@@ -10,7 +10,7 @@
 
   <!-- <div class="border"></div> -->
 
-  <div class="share__box collapsable__content">
+  <div class="share__box collapsable__content collapsable__open">
     <button
       class="share__box--button js-create-btn"
       type="submit"
@@ -19,6 +19,7 @@
       <i class="iconCard far fa-address-card"></i>
       Crear tarjeta
     </button>
+    <p class="js-required"></p>
     <div class="share__box--subsection js-hidden js-display">
       <h3 class="titleCard">La tarjeta ha sido creada:</h3>
       <a class="linkCard js-card-result" href="" target="_blank"
