--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -23,3 +23,6 @@ $palette2-color3: #e95626;
 $palette3-color1: #3e5b65;
 $palette3-color2: #eab052;
 $palette3-color3: #a0c0cf;
+$palette4-color1: black;
+$palette4-color2: #cc1517;
+$palette4-color3: #95999b;
