--- a/src/html/partials/form/design.html
+++ b/src/html/partials/form/design.html
@@ -41,6 +41,14 @@
           <li class="design__palette3--color3">colorC</li>
         </ul>
       </label>
+      <label class="design__palette--input" for="">
+        <input class="js-palette" type="radio" name="palette" value="4" />
+        <ul class="design__palette--list">
+          <li class="design__palette4--color1">colorA</li>
+          <li class="design__palette4--color2">colorB</li>
+          <li class="design__palette4--color3">colorC</li>
+        </ul>
+      </label>
     </div>
   </div>
 </fieldset>
