--- a/src/scss/layout/form/_fill.scss
+++ b/src/scss/layout/form/_fill.scss
@@ -70,6 +70,7 @@
       height: 30px;
     }
     .buttonImg {
+      cursor: pointer;
       height: 30px;
       width: 140px;
       border-radius: 3px;
